recent: Fix alignment of unread count in PM rows.
The alignment was off in both narrow and wide screens. Added
an invisible mute icon to PM rows to keep the unread counts aligned
with topic rows.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -210,15 +210,14 @@
             opacity: 0.7;
         }
 
+        .recent_topic_actions.dummy_action_button {
+            visibility: hidden;
+        }
+
         .recent_topic_actions .recent_topics_focusable {
             display: flex;
             align-items: center;
             padding-bottom: 3px;
-
-            &.single_action_button {
-                /* 10px of unread count + 23px for bell icon */
-                margin-right: 33px;
-            }
         }
 
         .recent_topics_participants {
@@ -393,11 +392,6 @@
             .recent_topic_actions {
                 margin-right: 5px;
                 font-size: 15px;
-            }
-
-            .unread_count_pm {
-                /* Margin equal to size of recent topic actions */
-                margin-right: 44px;
             }
         }
     }
